k8s/deployments/devhub-email-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devhub-email-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devhub-email-server
  template:
    metadata:
      labels:
        app: devhub-email-server
    spec:
      containers:
      - name: devhub-email-server
        image: starwindsurf/devhub-email-image:latest
        ports:
        - containerPort: 8082
