k8s/deployments/devhub-secure-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devhub-secure-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devhub-secure-server
  template:
    metadata:
      labels:
        app: devhub-secure-server
    spec:
      containers:
      - name: devhub-secure-server
        image: starwindsurf/devhub-secure-image:latest
        ports:
        - containerPort: 8081
