k8s/deployments/devhub-user-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devhub-user-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devhub-user-server
  template:
    metadata:
      labels:
        app: devhub-user-server
    spec:
      containers:
      - name: devhub-user-server
        image: starwindsurf/devhub-user-image:latest
        ports:
        - containerPort: 8080
